--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -9,6 +9,9 @@ on:
       - keymap-drawer/config.yaml
       - .github/workflows/draw-keymaps.yml
 
+permissions:
+  contents: read
+  
 jobs:
   draw:
     uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
